Engine should log start failures before Executor start

XMLWordPrintableJSON

    • Atlas Streams
    • Fully Compatible
    • Sprint 62, Sprint 63, Sprint 64
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If streams_startStreamProcessor fails before making it to Executor start, it is hard to see in engine logs why that command failed. While the Agent will log the failure reason, it's convenient to log this in the engine as well.

      We can amend the startStreamProcessor command implementation (and other commands), to try/catch, log with a stub context, and rethrow the exception.

            Assignee:
            Andrea Rahmanan
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: