SERVER-96436: log streams command failure details (#29928)