src/mongo/db/modules/enterprise/src/streams/commands/send_event.cpp
@@ -5,8 +5,12 @@
 
 #include "mongo/db/commands.h"
 #include "mongo/db/server_feature_flags_gen.h"
+#include "mongo/logv2/log.h"
+#include "mongo/logv2/log_attr.h"
 #include "streams/commands/stream_ops_gen.h"
 #include "streams/management/stream_manager.h"
+
+#define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kStreams
 
 namespace streams {
 
@@ -37,8 +41,17 @@ public:
         using InvocationBase::InvocationBase;
         Reply typedRun(OperationContext* opCtx) {
             const auto& requestParams = request();
-            StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
-            return streamManager->sendEvent(requestParams);
+            try {
+                StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
+                return streamManager->sendEvent(requestParams);
+            } catch (const std::exception& e) {
+                LOGV2_ERROR(9643604,
+                            "Unexpected std::exception in streams_sendEvent",
+                            "streamProcessorId"_attr = requestParams.getProcessorId(),
+                            "tenantId"_attr = requestParams.getTenantId(),
+                            "exception"_attr = e.what());
+                throw;
+            }
         }
 
     private:
