src/mongo/db/modules/enterprise/src/streams/commands/start_stream_processor.cpp
@@ -6,9 +6,13 @@
 
 #include "mongo/db/commands.h"
 #include "mongo/db/server_feature_flags_gen.h"
+#include "mongo/logv2/log.h"
+#include "mongo/logv2/log_attr.h"
 #include "mongo/platform/basic.h"
 #include "streams/commands/stream_ops_gen.h"
 #include "streams/management/stream_manager.h"
+
+#define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kStreams
 
 namespace streams {
 
@@ -44,8 +48,18 @@ public:
         using InvocationBase::InvocationBase;
         Reply typedRun(OperationContext* opCtx) {
             const auto& requestParams = request();
-            StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
-            return streamManager->startStreamProcessor(requestParams);
+            try {
+                StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
+                return streamManager->startStreamProcessor(requestParams);
+            } catch (const std::exception& e) {
+                LOGV2_ERROR(9643605,
+                            "Unexpected std::exception in streams_startStreamProcessor",
+                            "streamProcessorName"_attr = requestParams.getName().toString(),
+                            "streamProcessorId"_attr = requestParams.getProcessorId(),
+                            "tenantId"_attr = requestParams.getTenantId(),
+                            "exception"_attr = e.what());
+                throw;
+            }
         }
 
     private:
