src/mongo/db/modules/enterprise/src/streams/commands/start_stream_sample.cpp
@@ -6,8 +6,12 @@
 
 #include "mongo/db/commands.h"
 #include "mongo/db/server_feature_flags_gen.h"
+#include "mongo/logv2/log.h"
+#include "mongo/logv2/log_attr.h"
 #include "streams/commands/stream_ops_gen.h"
 #include "streams/management/stream_manager.h"
+
+#define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kStreams
 
 namespace streams {
 
@@ -39,13 +43,23 @@ public:
         using InvocationBase::InvocationBase;
         Reply typedRun(OperationContext* opCtx) {
             const StartStreamSampleCommand& requestParams = request();
-            StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
-            int64_t cursorId = streamManager->startSample(requestParams);
+            try {
+                StreamManager* streamManager = getStreamManager(opCtx->getServiceContext());
+                int64_t cursorId = streamManager->startSample(requestParams);
 
-            Reply reply;
-            reply.setName(requestParams.getName());
-            reply.setCursorId(cursorId);
-            return reply;
+                Reply reply;
+                reply.setName(requestParams.getName());
+                reply.setCursorId(cursorId);
+                return reply;
+            } catch (const std::exception& e) {
+                LOGV2_ERROR(9643606,
+                            "Unexpected std::exception in streams_startStreamSample",
+                            "streamProcessorName"_attr = requestParams.getName().toString(),
+                            "streamProcessorId"_attr = requestParams.getProcessorId(),
+                            "tenantId"_attr = requestParams.getTenantId(),
+                            "exception"_attr = e.what());
+                throw;
+            }
         }
 
     private:
